# ICS

./: .depend  .gitignore  BIN-INSTALL.in  BIN-README  CHANGES.md  ICS-License-and-NDA.doc  LICENSE  Makefile.in  README  README.md  configure  configure.in  dune  dune-project  get-time.sh  ics  ics-mode.el  ics.in  ics.opam  ics.template  install.sh.in  os  regression.sh
chameleon/: .depend  .gitignore  Makefile.in  chameleon.ml
chameleon/src/: api.ml  chameleon.ml  mli_lexer.mll  mli_parser.mly  mli_types.ml  mli_types.mli  signature.mli
doc/: algo.tex  bakery.cpp  biblio.bib  demonstration.html  dep.ps  doc.html  doc.tex  downloading.html  ics.tex  index.html  intro.tex  introduction.html  manual.tex  misc.tex  ocamlweb.sty  papers.html  people.html  status.html  syntax.html  terms.tex  theo.tex
include/: icsapi.h
regression/: 22s.ics  25s.ics  27s.ics  2ba.ics  32s.ics  37s.ics  38s.ics  43s.ics  44s.ics  46s.ics  49s.ics  Carpark2-ausgabe-1.ics  Carpark2-ausgabe-2.ics  Carpark2-ausgabe-3.ics  Carpark2-ausgabe-4.ics  Carpark2-ausgabe-5.ics  Carpark2-ausgabe-6.ics  Carpark2-ausgabe-7.ics  Carpark2-ausgabe-8.ics  Carpark2-t1-1.ics  Carpark2-t1-2.ics  Carpark2-t1-3.ics  Carpark2-t1-4.ics  FISCHER1-1-fair.ics  FISCHER1-1-ninc.ics  FISCHER1-2-fair.ics  FISCHER1-2-ninc.ics  FISCHER1-3-fair.ics  FISCHER1-4-fair.ics  FISCHER1-5-fair.ics  FISCHER1-6-fair.ics  FISCHER10-1-fair.ics  FISCHER10-1-ninc.ics  FISCHER10-10-fair.ics  FISCHER10-10-ninc.ics  FISCHER10-11-fair.ics  FISCHER10-11-ninc.ics  FISCHER10-12-fair.ics  FISCHER10-13-fair.ics  FISCHER10-14-fair.ics  (+499 more)
sat/: Makefile.in
sat/src/: LPException.cpp  LPException.h  LPFormula.cpp  LPFormula.h  LPMatcher.cpp  LPMatcher.h  LPSolver.cpp  LPSolver.h  LPSolver_backtrack.cpp  LPSolver_branching.cpp  LPSolver_conflict_resolution.cpp  LPSolver_constraint_propagation.cpp  LPSolver_implication_graph_optimization.cpp  LPSolver_internalization.cpp  LPSolver_invariants.cpp  LPSolver_lookahead.cpp  LPSolver_polarity_optimization.cpp  LPSort.h  Makefile.in  StringBuffer.cpp  StringBuffer.h  UString.cpp  UString.h  cache_table.h  circular-list.h  consts.h  error.cpp  error.h  errormsg.cpp  errormsg.h  fast-allocator.cpp  fast-allocator.h  fix-size-allocator.h  fmessage.cpp  fmessage.h  growable-vector.h  ics_bridge.cpp  ics_interface.cpp  ics_interface.h  icsat.h  (+15 more)
src/: .gitignore  a.ml  a.mli  ac.ml  ac.mli  acsym.ml  acsym.mli  allen.ml  allen.mli  app.ml  app.mli  apply.ml  apply.mli  arith.ml  arith.mli  arity.ml  arity.mli  arr.ml  arr.mli  arrays.ml  arrays.mli  atom.ml  atom.mli  axioms.ml  axioms.mli  b.ml  b.mli  bdd.ml  bdd.mli  bdds.ml  bdds.mli  binrel.ml  binrel.mli  bitv.ml  bitv.mli  bitvector.ml  bitvector.mli  bool.ml  bool.mli  boolean.ml  (+312 more)
tests/: bv.test  demo.ics  tests.ics
tests/bench/: arith-1  can-001  de-bruijn-10  de-bruijn-2  de-bruijn-20  de-bruijn-3  de-bruijn-30  de-bruijn-4  de-bruijn-40  de-bruijn-50  de-bruijn-60  equiv.ics  equiv2.ics  ineq-010  ineq-020  ineq-030  ineq-040  ineq-050  ineq-060  ineq-070  ineq-080  ineq-090  ineq-100  ineq-200  ite-001  linsys-005  linsys-006  linsys-007  linsys-008  linsys-009  linsys-010  linsys-011  linsys-012  linsys-013  linsys-014  linsys-015  linsys-020  linsys-025  linsys-030  linsys-032  (+23 more)
tests/consistent/: cong-1  cong-2  ineq-1  ineq-2  ineq-3  ineq-4  integers-1  prop-1  prop-2  theories-1  trans-1  trans-2
tests/inconsistent/: integers-1  integers-2  paper-1  paper-2  shostak-1  trans-1  trans-2  trans-3  types-001
tests/misc/: bv.test  demo.ml
