; The MIT License (MIT)
;
; Copyright (c) 2020 SRI International
;
; Permission is hereby granted, free of charge, to any person obtaining a copy
; of this software and associated documentation files (the "Software"), to deal
; in the Software without restriction, including without limitation the rights
; to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
; copies of the Software, and to permit persons to whom the Software is
; furnished to do so, subject to the following conditions:
;
; The above copyright notice and this permission notice shall be included in all
; copies or substantial portions of the Software.
;
; THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
; IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
; FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
; AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
; LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
; OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
; SOFTWARE.
;

(env
 (debug
  (flags
   (-w +a-4-9-18-30-40-42-44-48@50-66 -strict-formats -strict-sequence
     -error-style short -short-paths -bin-annot -keep-locs -keep-docs -opaque))
  (ocamlopt_flags
   (-w -a)))
 (_
  (flags
   (-w -a -error-style short -noassert -unsafe -unboxed-types))
  (ocamlopt_flags (-O3))))

(subdir
 src
 (library
  (public_name ics)
  (libraries num unix zarith)
  (flags (:standard))))

(subdir
 bin
 (executable
  (name main)
  (public_name ics)
  (libraries dune-build-info ics)
  (flags (:standard)))
 (ocamllex lexer smtLexer)
 (ocamlyacc parser smtParser))
